--- a/kubernetes/01-hello-world-rest-api/deployment.yaml
+++ b/kubernetes/01-hello-world-rest-api/deployment.yaml
@@ -3,13 +3,16 @@ kind: Deployment
 metadata:
   labels:
     app: hello-world
-  name: hello-world
+    version: v1
+  name: hello-world-v1
   namespace: default
 spec:
-  replicas: 3
+  replicas: 2
+  minReadySeconds: 45
   selector:
     matchLabels:
       app: hello-world
+      version: v1
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -19,9 +22,43 @@ spec:
     metadata:
       labels:
         app: hello-world
+        version: v1
     spec:
       containers:
       - image: in28min/hello-world-rest-api:0.0.1.RELEASE
+        imagePullPolicy: IfNotPresent
+        name: hello-world-rest-api
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: hello-world
+    version: v2
+  name: hello-world-v2
+  namespace: default
+spec:
+  replicas: 2
+  minReadySeconds: 45
+  selector:
+    matchLabels:
+      app: hello-world
+      version: v2
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: hello-world
+        version: v2
+    spec:
+      containers:
+      - image: in28min/hello-world-rest-api:0.0.2.RELEASE
         imagePullPolicy: IfNotPresent
         name: hello-world-rest-api
       restartPolicy: Always
@@ -45,6 +82,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: hello-world
+    app: hello-world    
+    version: v2
   sessionAffinity: None
   type: LoadBalancer
